tests/data-clumps/test-cases/field-field/simple/negative/java/source/Doctor.java
public class Doctor {
    public String firstName;
    public String lastName;
    public String specialization;

    public Doctor(String firstName, String lastName, String specialization) {
        this.firstName = firstName;
        this.lastName = lastName;
        this.specialization = specialization;
    }
}
